--- a/includes/styles.css
+++ b/includes/styles.css
@@ -42,10 +42,16 @@ header {
 }
 
 .nav-item {
-	border-left: 1px solid #eee;
+	/*border-left: 1px solid #eee;*/
 	color: black;
 	padding: 0.5rem;
 	font-weight: 500;
+	transition-duration: 0.5s;
+	margin-left: 1px;
+}
+
+.nav-item:hover {
+	background-color: #fafafa;
 }
 
 .navbar-link {
@@ -54,7 +60,7 @@ header {
 	transition-duration: 0.5s;
 }
 
-.navbar-link:hover {
+.nav-item:hover .navbar-link {	
 	color: black;
 	text-decoration: none;
 }
@@ -113,7 +119,7 @@ a {
 
 .footer-copyright {
 	color: #bbb;
-	margin-top: 1rem;
+	margin-top: 2rem;
 }
 
 .card {
@@ -123,11 +129,5 @@ a {
 
 .center {
 	text-align: center;
-}
-
-
-.col-milieu{
-    margin-left: auto;
-    margin-right: auto;
 }
 
