--- a/includes/styles.css
+++ b/includes/styles.css
@@ -140,6 +140,9 @@ a {
 }
 
 .card-article .card-img {
+	min-width: 100%;
+	min-height: 100%;
+	object-fit: cover;
 	opacity: 100%;
 	transition-duration: 0.5s;
 }
