--- a/includes/styles.css
+++ b/includes/styles.css
@@ -154,11 +154,15 @@ a {
 .card-article .card-img-overlay {
 	transition-duration: 0.5s;
 	height: 6rem;
+	border-bottom-width: 0px;
+	border-bottom-style: solid;
 }
 
 .card-article:hover .card-img-overlay {
 	color: rgba(255, 255, 255, 1);
 	height: 100%;
+	border-bottom-width: 8px;
+	border-bottom-style: solid;
 }
 
 .card-article .card-text {
@@ -188,4 +192,21 @@ a {
 .card-article:hover .card-article-content {
 	height: auto;
 	opacity: 100%;
+}
+
+#searchForm {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #fff;
+	padding-left: 1rem;
+	padding-right: 1rem;	
+	display: flex;
+	align-content: center;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	transition-duration: 0.5s;
 }
